[SDPA-6056] Fix Spinner overlapping in confirm removal dropdown

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -38,3 +38,9 @@
   text-transform: none;
   letter-spacing: normal;
 }
+
+.dropbutton-multiple .dropbutton-action .ajax-progress {
+  position: relative !important;
+  top: -4px !important;
+  left: 30px !important;
+}
